// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ErrorMessage /> when a html element is passed renders without crashing 1`] = `
<div
  className="ErrorMessage__StyledError-sc-11kho77-0 cUudsG"
  role="alert"
>
  <span>
    This is an error in a span
  </span>
</div>
`;

exports[`<ErrorMessage /> when a react component is passed renders without crashing 1`] = `
<div
  className="ErrorMessage__StyledError-sc-11kho77-0 cUudsG"
  role="alert"
>
  <div>
    This is an error in a component
  </div>
</div>
`;

exports[`<ErrorMessage /> when isBig prop is passed renders without crashing 1`] = `
<div
  className="ErrorMessage__StyledError-sc-11kho77-0 DzHRJ"
  role="alert"
>
  This is an error
</div>
`;

exports[`<ErrorMessage /> when text is passed renders without crashing 1`] = `
<div
  className="ErrorMessage__StyledError-sc-11kho77-0 cUudsG"
  role="alert"
>
  This is an error
</div>
`;
